// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`asarUnpack and files ignore 1`] = `
{
  "linux": [],
}
`;

exports[`asarUnpack and files ignore 2`] = `
{
  "files": {
    "index.html": {
      "offset": "0",
      "size": 486,
    },
    "index.js": {
      "offset": "486",
      "size": 3013,
    },
    "package.json": {
      "offset": "3499",
      "size": 224,
    },
    "path": {
      "files": {
        "app.asar": {
          "offset": "3723",
          "size": 714,
        },
      },
    },
  },
}
`;

exports[`isInstallDepsBefore=true > asarUnpack node_modules 1`] = `
{
  "linux": [],
}
`;

exports[`isInstallDepsBefore=true > asarUnpack node_modules 2`] = `
{
  "files": {
    "ci-info": {
      "files": {
        "LICENSE": {
          "size": "@size",
          "unpacked": true,
        },
        "index.js": {
          "size": "@size",
          "unpacked": true,
        },
        "package.json": {
          "size": "@size",
          "unpacked": true,
        },
        "vendors.json": {
          "size": "@size",
          "unpacked": true,
        },
      },
      "unpacked": true,
    },
  },
  "unpacked": true,
}
`;

exports[`isInstallDepsBefore=true > failed peer dep 1`] = `
{
  "linux": [],
}
`;

exports[`isInstallDepsBefore=true > ignore node_modules 1`] = `
{
  "linux": [],
}
`;

exports[`isInstallDepsBefore=true > symlinks everywhere with static framework 1`] = `
{
  "linux": [],
}
`;

exports[`isInstallDepsBefore=true > symlinks everywhere with static framework 2`] = `
{
  "link": "index.js",
}
`;

exports[`isInstallDepsBefore=true > symlinks everywhere with static framework 3`] = `
{
  "files": {
    "foo.js": {
      "link": "index.js",
    },
    "index.js": {
      "size": "<size>",
    },
    "node_modules": {
      "files": {
        "debug": {
          "files": {
            "LICENSE": {
              "size": "<size>",
            },
            "dist": {
              "files": {
                "debug.js": {
                  "size": "<size>",
                },
              },
            },
            "package.json": {
              "size": "<size>",
            },
            "src": {
              "files": {
                "browser.js": {
                  "size": "<size>",
                },
                "common.js": {
                  "size": "<size>",
                },
                "index.js": {
                  "size": "<size>",
                },
                "node.js": {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "hello-world": {
          "files": {
            "hello-world-framework.sh": {
              "size": "<size>",
              "unpacked": true,
            },
            "lib": {
              "files": {
                "Release": {
                  "files": {
                    "Hello.framework": {
                      "files": {
                        "Headers": {
                          "link": "node_modules/hello-world/lib/Release/Hello.framework/Versions/Current/Headers",
                          "unpacked": true,
                        },
                        "Hello": {
                          "link": "node_modules/hello-world/lib/Release/Hello.framework/Versions/Current/Hello",
                          "unpacked": true,
                        },
                        "Info.plist": {
                          "link": "node_modules/hello-world/lib/Release/Hello.framework/Versions/Current/Info.plist",
                          "unpacked": true,
                        },
                        "Modules": {
                          "link": "node_modules/hello-world/lib/Release/Hello.framework/Versions/Current/Modules",
                          "unpacked": true,
                        },
                        "Versions": {
                          "files": {
                            "A": {
                              "files": {
                                "Headers": {
                                  "files": {
                                    "HelloFramework.h": {
                                      "size": "<size>",
                                      "unpacked": true,
                                    },
                                  },
                                  "unpacked": true,
                                },
                                "Hello": {
                                  "size": "<size>",
                                  "unpacked": true,
                                },
                                "Info.plist": {
                                  "size": "<size>",
                                  "unpacked": true,
                                },
                                "Modules": {
                                  "files": {
                                    "Hello.abi.json": {
                                      "size": "<size>",
                                      "unpacked": true,
                                    },
                                    "Hello.swiftdoc": {
                                      "size": "<size>",
                                      "unpacked": true,
                                    },
                                    "Hello.swiftmodule": {
                                      "files": {
                                        "arm64.private.swiftinterface": {
                                          "size": "<size>",
                                          "unpacked": true,
                                        },
                                        "arm64.swiftinterface": {
                                          "size": "<size>",
                                          "unpacked": true,
                                        },
                                        "arm64.swiftmodule": {
                                          "size": "<size>",
                                          "unpacked": true,
                                        },
                                        "x86_64.private.swiftinterface": {
                                          "size": "<size>",
                                          "unpacked": true,
                                        },
                                        "x86_64.swiftinterface": {
                                          "size": "<size>",
                                          "unpacked": true,
                                        },
                                        "x86_64.swiftmodule": {
                                          "size": "<size>",
                                          "unpacked": true,
                                        },
                                      },
                                      "unpacked": true,
                                    },
                                    "Hello.swiftsourceinfo": {
                                      "size": "<size>",
                                      "unpacked": true,
                                    },
                                    "module.modulemap": {
                                      "size": "<size>",
                                      "unpacked": true,
                                    },
                                  },
                                  "unpacked": true,
                                },
                              },
                              "unpacked": true,
                            },
                            "Current": {
                              "link": "node_modules/hello-world/lib/Release/Hello.framework/Versions/A",
                              "unpacked": true,
                            },
                          },
                          "unpacked": true,
                        },
                      },
                      "unpacked": true,
                    },
                  },
                  "unpacked": true,
                },
              },
              "unpacked": true,
            },
            "package.json": {
              "size": "<size>",
              "unpacked": true,
            },
          },
          "unpacked": true,
        },
        "ms": {
          "files": {
            "index.js": {
              "size": "<size>",
            },
            "license.md": {
              "size": "<size>",
            },
            "package.json": {
              "size": "<size>",
            },
          },
        },
      },
    },
    "package.json": {
      "size": "<size>",
    },
  },
}
`;

exports[`isInstallDepsBefore=true > symlinks everywhere with static framework 4`] = `
[
  "app.asar",
  "app.asar.unpacked/node_modules/hello-world/hello-world-framework.sh",
  {
    "content": "{
    "name": "hello-world",
    "version": "1.0.0",
    "description": "Sample node_module to test symlinked framework handling",
    "author": "",
    "license": "ISC"
  }
",
    "name": "app.asar.unpacked/node_modules/hello-world/package.json",
  },
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Headers",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Hello",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Info.plist",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Modules",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/Current",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Hello",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Info.plist",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Modules/Hello.abi.json",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Modules/Hello.swiftdoc",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Modules/Hello.swiftsourceinfo",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Modules/module.modulemap",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Modules/Hello.swiftmodule/arm64.private.swiftinterface",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Modules/Hello.swiftmodule/arm64.swiftinterface",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Modules/Hello.swiftmodule/arm64.swiftmodule",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Modules/Hello.swiftmodule/x86_64.private.swiftinterface",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Modules/Hello.swiftmodule/x86_64.swiftinterface",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Modules/Hello.swiftmodule/x86_64.swiftmodule",
  "app.asar.unpacked/node_modules/hello-world/lib/Release/Hello.framework/Versions/A/Headers/HelloFramework.h",
]
`;

exports[`link 1`] = `
{
  "linux": [],
}
`;

exports[`link 2`] = `
{
  "link": "index.js",
}
`;

exports[`link 3`] = `
{
  "files": {
    "app": {
      "files": {
        "package.json": {
          "files": {
            "readme.md": {
              "offset": "0",
              "size": 32,
            },
          },
        },
        "readme.md": {
          "offset": "32",
          "size": 78,
        },
      },
    },
    "foo.js": {
      "link": "index.js",
    },
    "index.html": {
      "offset": "110",
      "size": 841,
    },
    "index.js": {
      "offset": "951",
      "size": 4184,
    },
    "package.json": {
      "offset": "5135",
      "size": 289,
    },
  },
}
`;

exports[`outside link 1`] = `
{
  "linux": [],
}
`;

exports[`unpackDir 1`] = `
{
  "linux": [],
}
`;

exports[`unpackDir 2`] = `
{
  "files": {
    "assets": {
      "files": {
        "file-symlink2": {
          "link": "assets/file2",
          "unpacked": true,
        },
        "file1": {
          "size": 4,
          "unpacked": true,
        },
        "file2": {
          "size": 4,
          "unpacked": true,
        },
        "subdir": {
          "files": {
            "file-symlink1": {
              "link": "assets/file1",
              "unpacked": true,
            },
            "file3": {
              "size": 4,
              "unpacked": true,
            },
          },
          "unpacked": true,
        },
      },
      "unpacked": true,
    },
    "b2": {
      "files": {
        "file": {
          "size": 4,
          "unpacked": true,
        },
      },
      "unpacked": true,
    },
    "do-not-unpack-dir": {
      "files": {
        "dir-2": {
          "files": {
            "dir-3": {
              "files": {
                "dir-3": {
                  "files": {
                    "file-in-asar": {
                      "offset": "0",
                      "size": 2,
                    },
                  },
                },
              },
            },
          },
        },
        "file.json": {
          "size": 2,
          "unpacked": true,
        },
        "must-be-not-unpacked": {
          "offset": "2",
          "size": 2,
        },
      },
    },
    "file-symlink3": {
      "link": "assets/subdir/file3",
    },
    "index.html": {
      "offset": "4",
      "size": 486,
    },
    "index.js": {
      "offset": "490",
      "size": 3013,
    },
    "package.json": {
      "offset": "3503",
      "size": 224,
    },
    "path": {
      "files": {
        "app.asar": {
          "offset": "3727",
          "size": 714,
        },
      },
    },
  },
}
`;

exports[`unpackDir one 1`] = `
{
  "linux": [],
}
`;

exports[`unpackDir one 2`] = `
{
  "files": {
    "app": {
      "files": {
        "package.json": {
          "files": {
            "readme.md": {
              "offset": "0",
              "size": 32,
            },
          },
        },
        "readme.md": {
          "offset": "32",
          "size": 78,
        },
      },
    },
    "assets": {
      "files": {
        "file-symlink2": {
          "link": "assets/file2",
          "unpacked": true,
        },
        "file1": {
          "size": 4,
          "unpacked": true,
        },
        "file2": {
          "size": 4,
          "unpacked": true,
        },
        "subdir": {
          "files": {
            "file-symlink1": {
              "link": "assets/file1",
              "unpacked": true,
            },
            "file3": {
              "size": 4,
              "unpacked": true,
            },
          },
          "unpacked": true,
        },
      },
      "unpacked": true,
    },
    "b2": {
      "files": {
        "file": {
          "size": 4,
          "unpacked": true,
        },
      },
      "unpacked": true,
    },
    "do-not-unpack-dir": {
      "files": {
        "dir-2": {
          "files": {
            "dir-3": {
              "files": {
                "dir-3": {
                  "files": {
                    "file-in-asar": {
                      "offset": "110",
                      "size": 2,
                    },
                  },
                },
              },
            },
          },
        },
        "file.json": {
          "size": 2,
          "unpacked": true,
        },
        "must-be-not-unpacked": {
          "offset": "112",
          "size": 2,
        },
      },
    },
    "file-symlink3": {
      "link": "assets/subdir/file3",
    },
    "index.html": {
      "offset": "114",
      "size": 841,
    },
    "index.js": {
      "offset": "955",
      "size": 4184,
    },
    "package.json": {
      "offset": "5139",
      "size": 289,
    },
  },
}
`;
